Current:
  * Debug: A monitor for the xml communication between maxima and wxMaxima
  * jpeg-encoded images are now no more converted to much larger png files
    on saving .wxmx files and on exporting.
  * Bumped the minor version of the .wxmx format: Some old versions of
    wxmaxima will replace .jpg files embedded in .wxmx files by a
    placeholder on load
  * All Images that aren't currently displayed are now ony stored in their
    original compressed form.
  * Avoid as many image rescaling actions as possible.
  * Having the already-compressed images in memory means a massive speedup for
    saving files with many images.
  * Save the zoom factor at exit and reload it on opening a new file
  * An option that makes wxMaxima use user-defined labels instead of %o where an
    user-defined label exists. Works well together with unchecking the
    "export code cells" config item.
  * A separate text style for user-defined labels.
  * The "evaluate all cells" and "evaluate till here" now start with a fresh
    instance of maxima
  * TeX export now should work with most unicode chars we have ESC sequences
    for.
  * A few new ESC sequences and markdown commands.
  * "#" now is shown as a "not equal" sign as a "not equal" sign already would
    be interpreted as "#".
  * Teach SBCL and CCL on Windows how to deal with unicode variable names like
    ü and α.
  * Sidebars for symbols
  * Many bug, usability and performance fixes
  * Most importantly: If it is a cursor it blinks now.

15.08:
  * Compatibility with maxima 5.37.0
  * MathJAX now provides scaleable equations and extended drag-and-drop for the html export.
  * The table-of-contents-sidebar now shows the current cursor position
  * Fixed a few instances of cursors jumping out of the screen
  * Fixed a few instances of cursors jumping to the beginning or end of the worksheet
  * Better detection which cell maxima is processing and if it still is doing so