@@ -2,6 +2,7 @@ Current:
   * Debug: A monitor for the xml communication between maxima and wxMaxima
   * jpeg-encoded images are now no more converted to much larger png files
     on saving .wxmx files and on exporting.
+  * Images will now actually be converted to the target format.
   * Bumped the minor version of the .wxmx format: Some old versions of
     wxmaxima will replace .jpg files embedded in .wxmx files by a
     placeholder on load
